fixed grid layout bug

--- a/src/styles/main-container.css
+++ b/src/styles/main-container.css
@@ -72,9 +72,9 @@
 
 .notes-container {
     display: grid;
-    grid-template-columns: repeat(3, 331px);
-    grid-gap: 25px;
-    grid-auto-rows: 331px;
+    grid-template-columns: repeat(auto-fill, minmax(331px, 1fr));
+    grid-gap: 1rem;
+    grid-auto-rows: minmax(331px, 1fr);
 }
 
 .note {
